exports[`Object search reducer creates SEARCH_OBJECTS_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "page": Object {
      "page": 1,
      "perPage": 50
    },
    "type": "musit/objectSearch/SEARCH"
  },
  Object {
    "page": Object {
      "page": 1,
      "perPage": 50
    },
    "result": Object {
      "matches": Array [
        Object {
          "id": 51,
          "museumNo": "MusN11",
          "term": "Solsikke"
        }
      ],
      "totalMatches": 1
    },
    "type": "musit/objectSearch/SEARCH_SUCCESS"
  }
]
`;

exports[`Object search reducer search objects: fail action 1`] = `
Object {
  "data": Array [],
  "error": [Error: search objects has some error.],
  "loaded": false,
  "loading": false,
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: initial action 1`] = `
Object {
  "data": Object {
    "matches": Array [],
    "totalMatches": 0
  },
  "loaded": false,
  "loading": true,
  "params": Object {
    "currentPage": undefined,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: no action 1`] = `
Object {
  "data": Object {
    "matches": Array [],
    "totalMatches": 0
  },
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;

exports[`Object search reducer search objects: success action 1`] = `
Object {
  "data": Object {
    "matches": Array [
      Object {
        "breadcrumb": Array [
          Object {
            "id": 1,
            "name": "root-node",
            "url": "/magasin/1"
          },
          Object {
            "id": 2,
            "name": "Utviklingsmuseet",
            "url": "/magasin/2"
          },
          Object {
            "id": 3,
            "name": "Forskningens hus",
            "url": "/magasin/3"
          },
          Object {
            "id": 4,
            "name": "Kulturværelset",
            "url": "/magasin/4"
          },
          Object {
            "id": 5,
            "name": "Naturværelset",
            "url": "/magasin/5"
          }
        ],
        "currentLocationId": 5,
        "id": 51,
        "museumNo": "MusN11",
        "path": ",1,2,3,4,5,",
        "pathNames": Array [
          Object {
            "name": "root-node",
            "nodeId": 1
          },
          Object {
            "name": "Utviklingsmuseet",
            "nodeId": 2
          },
          Object {
            "name": "Forskningens hus",
            "nodeId": 3
          },
          Object {
            "name": "Kulturværelset",
            "nodeId": 4
          },
          Object {
            "name": "Naturværelset",
            "nodeId": 5
          }
        ],
        "term": "Solsikke"
      },
      Object {
        "breadcrumb": Array [],
        "id": 54,
        "museumNo": "MusN13",
        "term": "Makrellsopp"
      },
      Object {
        "breadcrumb": Array [],
        "id": 19,
        "museumNo": "MusN20",
        "term": "Ukjent mygg"
      },
      Object {
        "breadcrumb": Array [],
        "id": 17,
        "museumNo": "MusN21",
        "subNo": "2",
        "term": "Snilebille"
      },
      Object {
        "breadcrumb": Array [],
        "id": 18,
        "museumNo": "MusN22",
        "term": "Fluesopp"
      },
      Object {
        "breadcrumb": Array [],
        "id": 14,
        "museumNo": "MusK23",
        "term": "Lite skaft av ben"
      },
      Object {
        "breadcrumb": Array [],
        "id": 15,
        "museumNo": "MusK24",
        "subNo": "a",
        "term": "Lendeklede"
      },
      Object {
        "breadcrumb": Array [],
        "id": 16,
        "museumNo": "MusK24",
        "subNo": "b",
        "term": "Kokekar"
      },
      Object {
        "breadcrumb": Array [
          Object {
            "id": 1,
            "name": "root-node",
            "url": "/magasin/1"
          },
          Object {
            "id": 2,
            "name": "Utviklingsmuseet",
            "url": "/magasin/2"
          },
          Object {
            "id": 3,
            "name": "Forskningens hus",
            "url": "/magasin/3"
          },
          Object {
            "id": 4,
            "name": "Kulturværelset",
            "url": "/magasin/4"
          },
          Object {
            "id": 5,
            "name": "Naturværelset",
            "url": "/magasin/5"
          }
        ],
        "currentLocationId": 5,
        "id": 9,
        "museumNo": "MusN28",
        "path": ",1,2,3,4,5,",
        "pathNames": Array [
          Object {
            "name": "root-node",
            "nodeId": 1
          },
          Object {
            "name": "Utviklingsmuseet",
            "nodeId": 2
          },
          Object {
            "name": "Forskningens hus",
            "nodeId": 3
          },
          Object {
            "name": "Kulturværelset",
            "nodeId": 4
          },
          Object {
            "name": "Naturværelset",
            "nodeId": 5
          }
        ],
        "term": "Tusenben"
      }
    ],
    "totalMatches": 55
  },
  "loaded": true,
  "loading": false,
  "params": Object {
    "currentPage": 1,
    "perPage": 50
  }
}
`;
